--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script src="https://kit.fontawesome.com/13929891c1.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400,500,600,700&amp;subset=cyrillic-ext" rel="stylesheet" />
     <title>React App</title>
 </head>
